name:                github-api
version:             0.1.0.0
synopsis:            Haskell client for GitHub API
description:         Please see README.md
homepage:            https://github.com/rcook/github-api-haskell
license:             MIT
license-file:        LICENSE
author:              Richard Cook
maintainer:          rcook@rcook.org
copyright:           2016 Richard Cook
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/rcook/github-api-haskell

executable github-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:      aeson
                    , base >= 4.7 && < 5
                    , bytestring
                    , http-streams
                    , io-streams
                    , HsOpenSSL

